filter overflow fix

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -418,6 +418,7 @@ a.carousel-control.right{
 
 #conditionPanel {
     display: flex;
+    overflow: scroll;
 }
 
 .condition {
